See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.06.00

              ppmtowinicon: fix array overrun with 4 and 8 bits per pixel.
              Broken in Netpbm 11.05 (December 2023).

              pamseq: fix typo in error message.

              build: makeman: fix warning about backslashes in strings.

23.12.28 BJH  Release 11.05.00

              pnmpad: Add -color, -promote, -extend-edge, -detect-background .

              pnmconvol: Restore ability of convolution matrix to be a
              pseudo-plain-PNM with samples that exceed the maxval.  Lost in
              10.30 (October 2005) because maxval-checking code was added to
              libnetpbm.  (Was fixed in 10.47.08 in November 2010, but only in
              the 10.47 series).

              pnmindex: Improve failure mode when -size or -across is zero.

              pnmindex: Make -plain work.

              pnmpad: fix behavior with -left, -right, and -width together or
              -top, -bottom, -height together: ignores -width where it should
              fail.  Broken in Netpbm 10.72 (September 2015).

              pamtosvg: fix "zero determinant" failure.  Introduced in
              Netpbm 11.04 (September 2023).

              pjtoppm: fix crash based on uninitialized variable.
              Introduced in Netpbm 11.04 (September 2023).

              ppmtopcxl: fix incorrect output with > 256 colors.  Always
              broken.  (Program was added in primordial Netpbm in 1990).

              pbmtext: fix buffer overrun with insanely large input.

              picttoppm: fix buffer overrun with insanely wide input.

              ppmtoxpm: fix incorrect output with insanely large number of
              colors.

              pnmscalefixed: fix incorrect output with really big image and
              -pixels option.

              ppmdither: fix buffer overrun with insanely large dithering